testsuite/tests/saks/should_fail/all.T
test('saks007_fail', normal, compile_fail, [''])
test('saks_fail001', normal, compile_fail, [''])
test('saks_fail002', normal, compile_fail, [''])
test('saks_fail003', normal, compile_fail, [''])
test('saks_fail004', normal, compile_fail, [''])
test('saks_fail005', normal, compile_fail, [''])
test('saks_fail006', normal, compile_fail, [''])
test('saks_fail007', normal, compile_fail, [''])
test('saks_fail008', normal, compile_fail, [''])
test('saks_fail009', normal, compile_fail, [''])
test('saks_fail010', normal, compile_fail, [''])
test('saks_fail011', normal, compile_fail, [''])
test('saks_fail012', normal, compile_fail, [''])
test('saks_fail013', normal, compile_fail, [''])
test('saks_fail014', normal, compile_fail, [''])
test('saks_fail015', normal, compile_fail, [''])
test('saks_fail016', normal, compile_fail, [''])
test('saks_fail017', normal, compile_fail, [''])
test('saks_fail018', normal, compile_fail, [''])
test('saks_fail019', normal, compile_fail, [''])
test('saks_fail020', normal, compile_fail, [''])
test('saks_fail021', normal, compile_fail, [''])
test('saks_fail022', normal, compile_fail, [''])
test('saks_fail023', normal, compile_fail, [''])
test('saks_fail024', normal, compile_fail, [''])
test('saks_fail025', normal, compile_fail, [''])
test('saks_fail026', normal, compile_fail, [''])
test('T16722', normal, compile_fail, [''])
test('T16727a', normal, compile_fail, [''])
test('T16727b', normal, compile_fail, [''])
test('T16725', normal, compile_fail, [''])
test('T16826', normal, compile_fail, [''])
test('T16756b', normal, compile_fail, [''])
test('T18863a', normal, compile_fail, [''])
test('T18863b', normal, compile_fail, [''])
test('T18863c', normal, compile_fail, [''])
test('T18863d', normal, compile_fail, [''])
test('T20916', normal, compile_fail, [''])
test('saks018-fail', normal, compile_fail, [''])
test('saks021-fail', normal, compile_fail, [''])
